...
            <objects>
                <navigationController id="35T-EN-00a" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Recipes" image="book.fill" catalog="system" id="aFF-gv-bOf"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZIZ-Ht-cfL">
                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksB-dP-g7l">
                                                <rect key="frame" x="20" y="373.5" width="29" height="27"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ingredientsText"/>
                                                <attributedString key="attributedText">
                                                    <fragment content="Text">
...
                                                <color key="tintColor" red="0.92211204769999999" green="0.3764045238" blue="0.55490905049999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <inset key="contentEdgeInsets" minX="25" minY="10" maxX="25" maxY="10"/>
                                                <state key="normal" backgroundImage="heart" catalog="system"/>
                                                <connections>
                                                    <action selector="favourite:" destination="3Kx-rg-Wem" eventType="touchUpInside" id="QyM-eR-z4i"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTU-Pj-thT">
                                                <rect key="frame" x="55" y="297.5" width="34" height="18"/>
                                                <accessibility key="accessibilityConfiguration" identifier="durationLabel"/>
                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mZG-Ec-O0a">
                                                <rect key="frame" x="20" y="481.5" width="29" height="27"/>
                                                <accessibility key="accessibilityConfiguration" identifier="textLabel"/>
                                                <attributedString key="attributedText">
                                                    <fragment content="Text">
...
                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Servings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcR-0B-aBx">
                                                <rect key="frame" x="154" y="297.5" width="59.5" height="18"/>
                                                <accessibility key="accessibilityConfiguration" identifier="servingsLabel"/>
                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Similar Recipes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BnD-eA-VOL">
                                                <rect key="frame" x="20" y="575.5" width="144.5" height="24"/>
                                                <accessibility key="accessibilityConfiguration" identifier="similarRecipesLabel"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="bi9-Ux-EEL"/>
                    <navigationItem key="navigationItem" title="Home" id="A1B-Ak-KpH"/>
                    <connections>
...
            <objects>
                <navigationController id="GFG-eG-X7H" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favourites" image="star.fill" catalog="system" id="AzF-W8-cqb"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0Pf-EJ-CUD">
                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
...
                                        <color key="tintColor" red="0.92211711409999997" green="0.37639513610000003" blue="0.55893963579999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <inset key="contentEdgeInsets" minX="25" minY="10" maxX="25" maxY="10"/>
                                        <state key="normal" backgroundImage="photo" catalog="system"/>
                                        <connections>
                                            <action selector="choosePhoto:" destination="61d-3C-RF9" eventType="touchUpInside" id="pUR-Fm-sqs"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qRU-M2-uGr" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Detector" image="smallcircle.circle.fill" catalog="system" id="Dib-Ib-5nj"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gXi-2P-wdT">
...
