...
            let alert = UIAlertController(title: "Recipe Search", message: "Enter a meal name, style, or genre.", preferredStyle: .alert)
            alert.applyCustomStyle()
            // Add a text field
            alert.addTextField(configurationHandler: { textField in
                textField.autocapitalizationType = .none
                textField.autocorrectionType = .yes
                textField.placeholder = "Search"
            })
            // Add a button below the text field
            let searchAction = UIAlertAction(title: "Search", style: .default, handler: { (_) in
                let textField = alert.textFields![0]
                let response = textField.text ?? ""
                
...
